test/libsolidity/syntaxTests/errors/hash_collision.sol
contract test {
    error gsf();
    error tgeo();
}
// ----
// TypeError 4883: (0-52): Error signature hash collision for tgeo()
